# DeltaProject

./: README.md  Strategy.md
Header/: Makefile  deltaproject.h  input.ixml  main.cpp  main.h  options.ixml  scrout.ixml
Utils/: deltaproject.h  mathutils.cpp  mathutils.h
delpro/: CMakeLists.txt  delpro.cpp  delpro.h  delpro.pro  delpro_for_win.cpp  delpro_global.h  mainwindow.cpp  mainwindow.h  plot.cpp  plot.h  textfield.cpp  textfield.h  wgt.h
experiment1/: deltaproject.cpp  deltaproject.h  instructions.txt  main.cpp  main.h
